[package]
name = "hh-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"]}
hyper = { version = "1.2.0", features = ["full"]}
http-body-util = "0.1.1"
hyper-util = { version = "0.1.3", features = ["full"] }
hyper-tls = "0.6.0"
url = "2.5.0"